--- a/BV304.QLKHO/BV304.QLKHO/BV.QLKHO.csproj
+++ b/BV304.QLKHO/BV304.QLKHO/BV.QLKHO.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="Infragistics4.Shared.v15.1, Version=15.1.20151.2230, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
     <Reference Include="Infragistics4.Win.Misc.v15.1, Version=15.1.20151.2230, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
+    <Reference Include="Infragistics4.Win.UltraWinDataSource.v15.1, Version=15.1.20151.2230, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="Infragistics4.Win.UltraWinEditors.v15.1, Version=15.1.20151.2230, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="Infragistics4.Win.UltraWinGrid.v15.1, Version=15.1.20151.2230, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="Infragistics4.Win.v15.1, Version=15.1.20151.2230, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
@@ -75,6 +76,24 @@
       <DependentUpon>KhoForm.cs</DependentUpon>
     </Compile>
     <Compile Include="KhoUtil.cs" />
+    <Compile Include="NhaCungCap\DanhMucNhaCungCapCtrl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="NhaCungCap\DanhMucNhaCungCapCtrl.Designer.cs">
+      <DependentUpon>DanhMucNhaCungCapCtrl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PhieuNhapThuoc\PhieuNhapForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhieuNhapThuoc\PhieuNhapForm.Designer.cs">
+      <DependentUpon>PhieuNhapForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PhieuNhapThuoc\PhieuNhapThuocCtrl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PhieuNhapThuoc\PhieuNhapThuocCtrl.Designer.cs">
+      <DependentUpon>PhieuNhapThuocCtrl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="THUOC\AutoCompleteTextBox.cs">
@@ -85,6 +104,18 @@
     </Compile>
     <Compile Include="THUOC\DanhMucThuocCtrl.Designer.cs">
       <DependentUpon>DanhMucThuocCtrl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NhaCungCap\NhaCungCapForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NhaCungCap\NhaCungCapForm.Designer.cs">
+      <DependentUpon>NhaCungCapForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="THUOC\ThongTinThuocFormTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="THUOC\ThongTinThuocFormTest.Designer.cs">
+      <DependentUpon>ThongTinThuocFormTest.cs</DependentUpon>
     </Compile>
     <Compile Include="THUOC\ThongTinThuocFormBYT.cs">
       <SubType>Form</SubType>
@@ -107,6 +138,15 @@
     <EmbeddedResource Include="KhoForm.resx">
       <DependentUpon>KhoForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NhaCungCap\DanhMucNhaCungCapCtrl.resx">
+      <DependentUpon>DanhMucNhaCungCapCtrl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhieuNhapThuoc\PhieuNhapForm.resx">
+      <DependentUpon>PhieuNhapForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhieuNhapThuoc\PhieuNhapThuocCtrl.resx">
+      <DependentUpon>PhieuNhapThuocCtrl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -123,6 +163,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="THUOC\DanhMucThuocCtrl.resx">
       <DependentUpon>DanhMucThuocCtrl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NhaCungCap\NhaCungCapForm.resx">
+      <DependentUpon>NhaCungCapForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="THUOC\ThongTinThuocFormTest.resx">
+      <DependentUpon>ThongTinThuocFormTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="THUOC\ThongTinThuocFormBYT.resx">
       <DependentUpon>ThongTinThuocFormBYT.cs</DependentUpon>
@@ -159,6 +205,7 @@
       <Name>BV.SharedComponent</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
