--- a/BV304.QLKHO/AppCommon/BV.AppCommon.csproj
+++ b/BV304.QLKHO/AppCommon/BV.AppCommon.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DanhMucBVCached.cs" />
     <Compile Include="PublicVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
