update connection string

--- a/BV304.QLKHO/BV304.QLKHO/app.config
+++ b/BV304.QLKHO/BV304.QLKHO/app.config
@@ -6,8 +6,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="KhoChungEntities" connectionString="metadata=res://*/KhoChung.KhoChungModel.csdl|res://*/KhoChung.KhoChungModel.ssdl|res://*/KhoChung.KhoChungModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BV304;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="KhoEntities" connectionString="metadata=res://*/Kho.KhoModel.csdl|res://*/Kho.KhoModel.ssdl|res://*/Kho.KhoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BV304.KHO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KhoChungEntities" connectionString="metadata=res://*/KhoChung.KhoChungModel.csdl|res://*/KhoChung.KhoChungModel.ssdl|res://*/KhoChung.KhoChungModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KhoEntities" connectionString="metadata=res://*/Kho.KhoModel.csdl|res://*/Kho.KhoModel.ssdl|res://*/Kho.KhoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304.KHO;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
