--- a/BV304.QLKHO/BVDataModel/App.Config
+++ b/BV304.QLKHO/BVDataModel/App.Config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="KhoChungEntities" connectionString="metadata=res://*/KhoChung.KhoChungModel.csdl|res://*/KhoChung.KhoChungModel.ssdl|res://*/KhoChung.KhoChungModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BV304;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="KhoEntities" connectionString="metadata=res://*/Kho.KhoModel.csdl|res://*/Kho.KhoModel.ssdl|res://*/Kho.KhoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BV304.KHO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KhoChungEntities" connectionString="metadata=res://*/KhoChung.KhoChungModel.csdl|res://*/KhoChung.KhoChungModel.ssdl|res://*/KhoChung.KhoChungModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KhoEntities" connectionString="metadata=res://*/Kho.KhoModel.csdl|res://*/Kho.KhoModel.ssdl|res://*/Kho.KhoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304.KHO;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+
 </configuration>
