--- a/304.Manage/BV.Application/QLKHO/app.config
+++ b/304.Manage/BV.Application/QLKHO/app.config
@@ -11,7 +11,7 @@
     <add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304;persist security info=True;user id=sa;password=sa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key="ConnectionString" value="Server=192.168.159.128;Database=BV304;user id=sa;password=sa;" />
+    <add key="ConnectionString" value="Server=192.168.159.128;Database=BV304;user id=sa;password=;" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
