--- a/304.Manage/BV.Application/QLKHO/app.config
+++ b/304.Manage/BV.Application/QLKHO/app.config
@@ -8,7 +8,9 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!--<add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BV304;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304;persist security info=True;user id=sa;password=sa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304;persist security info=True;user id=sa;password=sa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.128;initial catalog=BV304;persist security info=True;user id=sa;password=;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="ConnectionString" value="Server=192.168.159.128;Database=BV304;user id=sa;password=;" />
