Update new model with reference

--- a/304.Manage/BV.DAO/DataModel/BV.DataModel.csproj
+++ b/304.Manage/BV.DAO/DataModel/BV.DataModel.csproj
@@ -183,6 +183,9 @@
     <Compile Include="PhieuDeNghiChiTiet.cs">
       <DependentUpon>BVDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="PhieuDeNghiLoai.cs">
+      <DependentUpon>BVDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="PhieuNhapChiTiet.cs">
       <DependentUpon>BVDataModel.tt</DependentUpon>
     </Compile>
